@@ -48,7 +48,18 @@ ETag
    :members:
 
 
+Cookies
+~~~~~~~
 
+.. autoclass:: webob.cookies.CookieProfile
+   :members:
+.. autoclass:: webob.cookies.SignedCookieProfile
+   :members:
+.. autoclass:: webob.cookies.SignedSerializer
+   :members:
+.. autoclass:: webob.cookies.JSONSerializer
+   :members:
+.. autofunction:: webob.cookies.make_cookie
 
 
 Misc Functions and Internals
